# Space_Lubricants

./: README.md
leo-lubricant-gnn-active-learning/: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
leo-lubricant-gnn-active-learning/configs/: active_learning.yaml  experiment.yaml  model_gnn_gpr.yaml  preprocessing.yaml
leo-lubricant-gnn-active-learning/data/: README.md
leo-lubricant-gnn-active-learning/data/raw/: sample_candidates.csv  sample_molecules.csv
leo-lubricant-gnn-active-learning/docs/: data_schema.md  experimental_protocol.md  methodology.md  reproducibility.md
leo-lubricant-gnn-active-learning/notebooks/: README.md
leo-lubricant-gnn-active-learning/scripts/: 01_preprocess_data.py  02_train_model.py  03_evaluate_model.py  04_run_active_learning.py  05_generate_figures.py  06_run_baselines.py  07_run_ablation.py
leo-lubricant-gnn-active-learning/src/leo_lubricants/: __init__.py  pipeline.py  workflows.py
leo-lubricant-gnn-active-learning/src/leo_lubricants/active_learning/: __init__.py  acquisition.py  desirability.py  select_candidates.py
leo-lubricant-gnn-active-learning/src/leo_lubricants/data/: __init__.py  io.py  molecular_graphs.py  preprocess.py  schema.py  split.py
leo-lubricant-gnn-active-learning/tests/: test_active_learning.py  test_descriptors.py  test_desirability.py  test_environment.py  test_graphs.py  test_metrics.py  test_modeling.py  test_plots_and_baselines.py  test_preprocessing.py  test_schema.py  test_split.py
(+17 files in other folders)
