[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leo-lubricant-gnn-active-learning"
version = "0.1.0"
description = "Environment-conditioned degradation-aware GNN with Gaussian-process uncertainty estimation and active learning for space lubricant discovery."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Research Team"}
]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "torch",
  "pyyaml",
  "matplotlib",
  "rdkit",
  "tqdm",
  "joblib"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
packages = ["leo_lubricants"]

